[package]
name = "bt_http_cli_conf"
version = "0.1.0"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Retrieve the HTTP client configuration for a given environment from a YAML file."
keywords = ["http","client"]
categories = ["value-formatting", "development-tools", "filesystem","config"]
repository = "https://github.com/bachuetech/"
readme = "README.md"
homepage = "https://github.com/bachuetech/b"
license = "GPL-3.0-only"

[dependencies]
bt_logger = "0.2.2"
bt_yaml_utils = "0.1.2"
yaml-rust2 = "0.10.0"
